; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_path.c_local_file_url_prefixlen.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_path.c_local_file_url_prefixlen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"file://\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"localhost/\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @local_file_url_prefixlen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @local_file_url_prefixlen(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i32 -1, i32* %3, align 4
  %4 = load i8*, i8** %2, align 8
  %5 = call i64 @git__prefixcmp(i8* %4, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %22

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  %9 = getelementptr inbounds i8, i8* %8, i64 7
  %10 = load i8, i8* %9, align 1
  %11 = sext i8 %10 to i32
  %12 = icmp eq i32 %11, 47
  br i1 %12, label %13, label %14

13:                                               ; preds = %7
  store i32 8, i32* %3, align 4
  br label %21

14:                                               ; preds = %7
  %15 = load i8*, i8** %2, align 8
  %16 = getelementptr inbounds i8, i8* %15, i64 7
  %17 = call i64 @git__prefixcmp(i8* %16, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %14
  store i32 17, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %14
  br label %21

21:                                               ; preds = %20, %13
  br label %22

22:                                               ; preds = %21, %1
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i64 @git__prefixcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
